<resources>
    <string name="app_name">Learn Arduino</string>
    <string name="facebook_application_id" translatable="false">244861306465677</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb244861306465677</string>
    <string name="twitter_consumer_key" translatable="false">N8faeQY6tE6sQ42aYp7Drvkjt</string>
    <string name="twitter_consumer_secret" translatable="false">IZZY3BXvKCdiebzoOzdVOaSY9sOu1Lqad4BABdezM1xByDbdGi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="basic">Basic</string>
    <string name="sensors">Sensors</string>
    <string name="led">LED</string>
    <string name="movement">Movement</string>
    <string name="introduction_to_arduino">Introduction to \nArduino</string>
    <string name="basic_2">Basic 2</string>
    <string name="questions">questions</string>
    <string name="basic_3">Basic 3</string>
    <string name="basic_4">Basic 4</string>
    <string name="title_activity_sensor1">Sensor1Activity</string>
    <string name="title_activity_sensor2">Sensor2Activity</string>
    <string name="title_activity_sensor3">Sensor3Activity</string>
    <string name="title_activity_sensor4">Sensor4Activity</string>
    <string name="title_activity_sensor5">Sensor5Activity</string>
    <string name="title_activity_sensor6">Sensor6Activity</string>
    <string name="title_activity_sensor7">Sensor7Activity</string>
    <string name="title_activity_sensor8">Sensor8Activity</string>
    <string name="title_activity_sensor9">Sensor9Activity</string>
    <string name="title_activity_sensor10">Sensor10Activity</string>
    <string name="title_activity_sensor11">Sensor11Activity</string>
    <string name="title_activity_sensor12">Sensor12Activity</string>
    <string name="title_activity_sensor13">Sensor13Activity</string>
    <string name="title_activity_sensor14">Sensor14Activity</string>
    <string name="title_activity_sensor15">Sensor15Activity</string>
    <string name="title_activity_sensor16">Sensor16Activity</string>
    <string name="title_activity_sensor17">Sensor17Activity</string>
    <string name="title_activity_sensor18">Sensor18Activity</string>
    <string name="title_activity_sensor19">Sensor19Activity</string>
    <string name="title_activity_sensor20">Sensor20Activity</string>
    <string name="title_activity_sensor21">Sensor21Activity</string>
    <string name="title_activity_sensor22">Sensor22Activity</string>
    <string name="title_activity_sensor23">Sensor23Activity</string>
    <string name="title_activity_sensor24">Sensor24Activity</string>
    <string name="title_activity_sensor25">Sensor25Activity</string>
    <string name="title_activity_sensor26">Sensor26Activity</string>
    <string name="title_activity_sensor27">Sensor27Activity</string>
    <string name="title_activity_sensor28">Sensor28Activity</string>
    <string name="title_activity_sensor29">Tilt Switch</string>
    <string name="title_activity_sensor30">Digital Temperature Sensor</string>
    <string name="title_activity_sensor31">Rainbow LED</string>
    <string name="title_activity_sensor32">Infrared Receiver</string>
    <string name="title_activity_sensor33">Dual-color LED</string>
    <string name="title_activity_sensor34">Sound Sensor</string>
    <string name="title_activity_sensor35">Rotary Encoder</string>
    <string name="title_activity_sensor36">Laser Transmitter</string>
    <string name="title_activity_sensor37">IR Tracking Sensor</string>
    <string name="title_activity_sensor38">Color Detection</string>
    <string name="title_activity_sensor39">Analog-Digital Converter</string>
    <string name="sensor_text_1">Ultrasonic Sensor</string>
    <string name="sensor_text_2">IR Obstacle Avoidance Sensor</string>
    <string name="sensor_text_3">Soil Moisture Sensor</string>
    <string name="sensor_text_4">Microphone Sensor</string>
    <string name="sensor_text_5">Barometric Pressure Sensor</string>
    <string name="sensor_text_6">Photoresistor Sensor</string>
    <string name="sensor_text_7">Temperature Sensor</string>
    <string name="sensor_text_8">Switch Hall Sensor</string>
    <string name="sensor_text_9">Gas Sensor</string>
    <string name="sensor_text_10">Vibration Sensor</string>
    <string name="sensor_text_11">Humidity and Rain Detection Sensor</string>
    <string name="sensor_text_12">Passive Buzzer Module</string>
    <string name="sensor_text_13">Speed Sensor</string>
    <string name="sensor_text_14">IR Flame Detection Sensor</string>
    <string name="sensor_text_15">Relay Module</string>
    <string name="sensor_text_16">PIR Sensor</string>
    <string name="sensor_text_17">Accelerometer Module</string>
    <string name="sensor_text_18">Temperature and Humidity Sensor</string>
    <string name="sensor_text_19">RF Transmitter/Receiver</string>
    <string name="sensor_text_20">Analog Hall Sensor</string>
    <string name="sensor_text_21">Joystick Shield</string>
    <string name="sensor_text_22">Thermometer Detection by thermistor</string>
    <string name="sensor_text_23">Auto flash Led</string>
    <string name="sensor_text_24">Barometer</string>
    <string name="sensor_text_25">Real Time clock</string>
    <string name="sensor_text_26">Touch Sensor</string>
    <string name="sensor_text_27">Photo interrupter</string>
    <string name="sensor_text_28">Reed sensor</string>
    <string name="sensor_text_29">tilt Sensor</string>
    <string name="sensor_text_30">Digital Temperature </string>
    <string name="code_1"><![CDATA[    #define trigPin 11\n   #define echoPin 12\n   #define led 13\n   #define led2 10\n     void setup()\n {\n      Serial.begin (9600);\n     pinMode(trigPin, OUTPUT);\n      pinMode(echoPin, INPUT);\n      pinMode(led, OUTPUT);\n      pinMode(led2, OUTPUT);\n   }\n     void loop() {\n      long duration, distance;\n      digitalWrite(trigPin, LOW);\n     delayMicroseconds(2);\n      digitalWrite(trigPin, HIGH);\n      delayMicroseconds(10);\n      digitalWrite(trigPin, LOW);\n      duration = pulseIn(echoPin, HIGH);\n      distance = (duration/2) / 29.1;\n     if (distance < 4) {\n      digitalWrite(led,HIGH);\n    digitalWrite(led2,LOW);\n   }\n   else {\n   digitalWrite(led,LOW);\n   digitalWrite(led2,HIGH);\n   }\n   if (distance >= 200 || distance <= 0){\n   Serial.println(\"Out of range\");\n   }\n   else {\n   Serial.print(distance);\n   Serial.println(\" cm\");\n   }\n   delay(500);\n   }\n]]></string>
    <string name="code_2">const int ledPin = 13; //pin13 built-in led\n const int avoidPin = 7; //the ir obstacle sensor attach to pin 7\n void setup() {\n  pinMode(ledPin, OUTPUT); //set the ledPin as OUTPUT\n  pinMode(avoidPin, INPUT); //set the avoidPin as INPUT\n }\n void loop() {\n  boolean avoidVal = digitalRead(avoidPin); //read the value of pin7\n   if(avoidVal == LOW)  {\n  digitalWrite(ledPin, HIGH);\n  }else  {\n  digitalWrite(ledPin, LOW);\n   }\n }</string>
    <string name="code_3"> int sensor_pin = A0;\nint output_value ;\n\nvoid setup() {\n   Serial.begin(9600);\n   Serial.println(\"Reading From the Sensor ...\");\n   delay(2000);\n   }\n\nvoid loop() {\n   output_value= analogRead(sensor_pin);\n   output_value = map(output_value,550,0,0,100);\n   Serial.print(\"Mositure : \");\n   Serial.print(output_value);\n   Serial.println(\"%\");\n   delay(1000);\n\n   }</string>
    <string name="code_4">int soundSensor = 2;\n int LED = 3;\n  void setup()  {\n   pinMode (soundSensor, INPUT);\n  pinMode (LED, OUTPUT);\n }\n  void loop() {\n  int statusSensor = digitalRead (soundSensor);\n    if (statusSensor == 1)  {\n  digitalWrite(LED, HIGH);\n  }\n    else  {\n  digitalWrite(LED, LOW);\n  }\n  }</string>
    <string name="code_5"><![CDATA[#include <Wire.h>\n  #include <Adafruit_BMP085.h>\n    // Connect VCC of the BMP180 sensor to 3.3V\n  // Connect GND to Ground\n  // Connect SCL to i2c clock thats A5\n  // Connect SDA to i2c data thats A4\n    Adafruit_BMP085 bmp;\n    void setup()  {\n   Serial.begin(9600);\n   if (!bmp.begin())   {\n   Serial.println(\"BMP180 sensor not found\");\n   while (1) {}   }  }\n    void loop() {\n   Serial.print(\"Temperature = \");\n   Serial.print(bmp.readTemperature());\n   Serial.println(\" *C\");\n     Serial.print(\"Altitude = \");\n   Serial.print(bmp.readAltitude(101500));\n   Serial.println(\" meters\");\n     Serial.println();\n   delay(1000);\n   }]]></string>
    <string name="code_12">int buzzPin = 3; //Connect Buzzer on Digital Pin3\n void setup() {\n pinMode(buzzPin, OUTPUT);\n }\n void loop() {\n digitalWrite(buzzPin, HIGH);\n delay(1);\n digitalWrite(buzzPin, LOW);\n delay(1);\n }\n</string>
    <string name="code_11">int nRainIn = A1;\n int nRainDigitalIn = 2;\n int nRainVal;\n boolean bIsRaining = false;\n String strRaining;\n void setup() {\n Serial.begin(9600);\n pinMode(2,INPUT);\n }\n void loop() {\n nRainVal = analogRead(nRainIn);\n bIsRaining = !(digitalRead(nRainDigitalIn));\n if(bIsRaining){\n strRaining = \"YES\";\n }\n else{\n strRaining = \"NO\";\n }\n Serial.print(\"Raining?: \");\n Serial.print(strRaining);\n Serial.print(\"\t Moisture Level: \");\n Serial.println(nRainVal);\n delay(200);\n }\n</string>
    <string name="code_10"><![CDATA[int LED_Pin = 13;\n int vibr_Pin =3;\n void setup(){\n pinMode(LED_Pin, OUTPUT);\n pinMode(vibr_Pin, INPUT);\n //set vibr_Pin input for measurment\n Serial.begin(9600);\n //init serial 9600 //\n Serial.println(\"----------------------Vibration demo------------------------\");\n }\n void loop(){\n long measurement =TP_init();\n delay(50);\n  Serial.print(\"measurment = \");\n Serial.println(measurement);\n if (measurement > 1000){\n digitalWrite(LED_Pin, HIGH);\n }\n else{\n digitalWrite(LED_Pin, LOW);\n }\n }\n long TP_init(){\n delay(10);\n long measurement=pulseIn (vibr_Pin, HIGH);\n //wait for the pin to get HIGH and returns measurement return measurement;\n }\n]]></string>
    <string name="code_6">int sensorPin = A0; // select the input pin for LDR\n int sensorValue = 0; // variable to store the value coming from the sensor\n void setup() {\n Serial.begin(9600); \n }\n void loop() {\n sensorValue = analogRead(sensorPin);\n // read the value from the sensor\n Serial.println(sensorValue); //prints the values coming from the sensor on the screen\n delay(100);\n }</string>
    <string name="code_7"><![CDATA[#include <math.h>\n int sensorPin = A5; // select the input pin for the potentiometer\n double Thermistor(int RawADC) {\n double Temp;\n Temp = log(10000.0*((1024.0/RawADC-1)));\n Temp = 1 / (0.001129148 + (0.000234125 + (0.0000000876741 * Temp * Temp ))* Temp );\n Temp = Temp - 273.15;\n // Convert Kelvin to Celsius //\nTemp = (Temp * 9.0)/ 5.0 + 32.0;\n // Convert Celsius to Fahrenheit\n return Temp; \n}\n void setup() {\n Serial.begin(9600);\n }\n void loop() {\n int readVal=analogRead(sensorPin);\n double temp = Thermistor(readVal);\n Serial.println(temp);\n // display tempature //\nSerial.println(readVal);\n // display tempature \ndelay(500);\n }]]></string>
    <string name="about_us">About Us</string>
    <string name="more_apps">More Apps</string>
    <string name="sign_out">Sign Out</string>
    <string name="basic_sensors">Basic Sensors</string>
    <string name="communicate">Communicate</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="something_here">Something here</string>
    <string name="block_diagram">Block Diagram</string>
    <string name="description">Description</string>
    <string name="circuit_diagram">Circuit Diagram</string>
    <string name="components_required">Components Required</string>
</resources>