<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/basic_sensors">
        <menu>
            <item
                android:id="@+id/nav_ultrasonic"
                android:icon="@drawable/ic_ledprojects"
                android:title="@string/basic" />
            <item
                android:id="@+id/nav_IR_Obstacle"
                android:icon="@drawable/ic_bio_sensor"
                android:title="@string/sensors" />
            <item
                android:id="@+id/Soil_Moisture"
                android:icon="@drawable/ic_led"
                android:title="@string/led" />
            <item
                android:id="@+id/nav_Blink"
                android:icon="@drawable/ic_movement"
                android:title="@string/movement" />
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_moreapp"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/more_apps" />
            <item
                android:id="@+id/nav_invitefriends"
                android:icon="@drawable/invite_friend"
                android:title="@string/invite_friends" />
        </menu>


    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/sign_out" />
</menu>
