<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Tol2.Lesson1.Lesson1Content"
    tools:showIn="@layout/activity_lesson1_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/L1C_img1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"/>
            <TextView
                android:id="@+id/L1C_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/something_here"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block_diagram"
            android:paddingBottom="5dp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"/>
        <ImageView
            android:paddingTop="5dp"
            android:id="@+id/L1C_img2"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>