<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Tol3.Tol3_Lesson_Content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circuit_diagram"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"/>
        <ImageView
            android:id="@+id/L1C_img_tol3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:textAllCaps="false"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/L1C_content1_tol3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="2dp"
                android:paddingBottom="5dp"
                android:text="@string/something_here" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/components_required"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/L1C_content2_tol3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="2dp"
                android:paddingBottom="5dp"
                android:text="@string/something_here" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text=" "
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>